test/types/coerce/diten/test_uint64_op_int_error2.good
test_uint64_op_int_error2.chpl:4: error: unresolved call '%(9223372036854775807: uint(64), -1)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: this candidate did not match: %(a: uint(8), b: uint(8))
test_uint64_op_int_error2.chpl:4: note: because actual argument #1 with type 'uint(64)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: is passed to formal 'a: uint(8)'
test_uint64_op_int_error2.chpl:4: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   %(a: uint(16), b: uint(16))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   %(a: uint(32), b: uint(32))
note: and 23 other candidates, use --print-all-candidates to see them
