test/types/coerce/diten/test_uint64_op_int_error2.chpl
param u: uint(64) = 1;
param i: int(64) = -1;

writeln(u % i);
